feat: implement login and register